# ClassifierProMax

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
.virtual_documents/docs/: example.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
src/classifierpromax/: ClassifierOptimizer.py  ClassifierTrainer.py  Classifier_Optimizer.py  Classifier_Trainer.py  FeatureSelector.py  Feature_Selector.py  ResultHandler.py  Result_Handler.py
tests/: test_ClassifierOptimizer.py  test_ClassifierTrainer.py  test_Classifier_Optimizer.py  test_Classifier_Trainer.py  test_FeatureSelector.py  test_Feature_Selector.py  test_ResultHandler.py  test_Result_Handler.py  test_classifierpromax.py
