[tool.poetry]
name = "classifierpromax"
version = "0.1.0"
description = "Help you train and optimize many popuplar classifiers in one place with a nice result table"
authors = ["Long Nguyen, Jenson Chang, Gunisha Kaur, Han Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
